--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,36 @@
   "login_button": "Log in",
   "nick_name": "Player name...",
   "enter_nick_name": "Enter player name to log in:",
-  "login_label": "Login to the system<i class=\"fa fa-key pull-right\"></i>"
+  "login_label": "Login to the system",
+  "left_menu_characters": "Characters",
+  "left_menu_races": "Races",
+  "left_menu_attributes": "Attributes",
+  "left_menu_merits": "Merits",
+  "left_menu_inherents": "Inherent qualities",
+  "left_menu_flaws": "Flaws",
+  "left_menu_attached_skills": "Attached skills",
+  "left_menu_trigger_skills": "Trigger skills",
+  "left_menu_spells": "Spells",
+  "top_menu_player": "Player:",
+  "top_menu_role": "Role:",
+  "top_menu_dropdown_profile": " Profile",
+  "top_menu_dropdown_characters": " My characters",
+  "top_menu_dropdown_logout": " Logout",
+  "top_menu_dropdown_admin": " Access management",
+  "add_character_header": "Add character",
+  "name_label": "Name",
+  "name_placeholder": "Character's name...",
+  "race_label": "Race",
+  "race_selection_placeholder": "Select race...",
+  "experience_label": "Experience points",
+  "create_character_button": "Create",
+  "my_characters_header": "Characters",
+  "show_all_characters_button": "Show all characters",
+  "show_my_characters_button": "Show my characters",
+  "empty_characters_list_message": "You haven`t created any characters. To create a character please use a form above.",
+  "alt_avatar": "Avatar should be here",
+  "character_view_button": "View",
+  "character_creation_button": "Continue creation",
+  "character_boost_button": "Advancement",
+  "delete_character_button": "Delete"
 }
