--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,36 @@
   "login_button": "Войти",
   "nick_name": "Имя...",
   "enter_nick_name": "Введите имя игрока для входа:",
-  "login_label": "Войти в систему<i class=\"fa fa-key pull-right\"></i>"
+  "login_label": "Войти в систему",
+  "left_menu_characters": "Персонажи",
+  "left_menu_races": "Расы",
+  "left_menu_attributes": "Атрибуты",
+  "left_menu_merits": "Достоинства",
+  "left_menu_inherents": "Врожденные особенности",
+  "left_menu_flaws": "Недостатки",
+  "left_menu_attached_skills": "Прикрепленные навыки",
+  "left_menu_trigger_skills": "Тригерные навыки",
+  "left_menu_spells": "Заклинания",
+  "top_menu_player": "Игрок:",
+  "top_menu_role": "Права:",
+  "top_menu_dropdown_profile": " Профиль",
+  "top_menu_dropdown_characters": " Мои персонажи",
+  "top_menu_dropdown_logout": " Сменить профиль",
+  "top_menu_dropdown_admin": " Управление доступом",
+  "add_character_header": "Добавить персонажа",
+  "name_label": "Имя",
+  "name_placeholder": "Имя персонажа...",
+  "race_label": "Раса",
+  "race_selection_placeholder": "Выберите расу...",
+  "experience_label": "Очки опыта",
+  "create_character_button": "Создать",
+  "my_characters_header": "Персонажаи",
+  "show_all_characters_button": "Показать всех персонажей",
+  "show_my_characters_button": "Показать моих персонажей",
+  "empty_characters_list_message": "Вы еще не создали ни одного персонажа, для создания воспользуйтесь формой выше.",
+  "alt_avatar": "Здесь должке быть аватар",
+  "character_view_button": "Просмотр",
+  "character_creation_button": "Продолжить создание",
+  "character_boost_button": "Прокачка",
+  "delete_character_button": "Удалить"
 }
