--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,7 @@
 {
+  "cancel_button": "Отмена",
+  "save_button": "Сохранить",
+  "add_button": "Добавить",
   "brand_name": "ЭРИЛОН",
   "login_button": "Войти",
   "nick_name": "Имя...",
@@ -34,5 +37,17 @@
   "character_view_button": "Просмотр",
   "character_creation_button": "Продолжить создание",
   "character_boost_button": "Прокачка",
-  "delete_character_button": "Удалить"
+  "delete_character_button": "Удалить",
+  "attributes_header": "Атрибуты",
+  "attributes_table_header_name": "Имя",
+  "attributes_table_header_action_bonus": "Бонус на действия",
+  "attributes_table_header_description": "Описание",
+  "attributes_table_header_actions": "Действия",
+  "edit_attribute_title": "Редактировать атрибут",
+  "edit_attribute_description": "Описание:",
+  "edit_attribute_bonus": "Бонус:",
+  "add_attribute_name": "Имя:",
+  "add_attribute_title": "Добавить атрибут",
+  "attribute_exists_error_message": "Атрибут с таким именем уже существует!",
+  "attribute_name_empty_error_message": "Имя атрибута не может быть пустым!"
 }
