--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,9 @@
   "cancel_button": "Cancel",
   "save_button": "Save",
   "add_button": "Add",
+  "delete_button": "Delete!",
+  "confirm_title": "Are you sure?",
+  "by_default": "Default",
 
   "brand_name": "ERILON",
   "login_button": "Log in",
@@ -41,15 +44,26 @@
   "character_boost_button": "Advancement",
   "delete_character_button": "Delete",
   "attributes_header": "Attributes",
-  "attributes_table_header_name": "Name",
-  "attributes_table_header_action_bonus": "Action bonus",
-  "attributes_table_header_description": "Description",
-  "attributes_table_header_actions": "Actions",
+  "table_header_name": "Name",
+  "table_header_action_bonus": "Action bonus",
+  "table_header_description": "Description",
+  "table_header_actions": "Actions",
+  "table_header_max_age": "Max age",
+  "table_header_attributes_cost": "Attributes cost",
+  "table_header_races_qualities": "Races qualities",
   "edit_attribute_title": "Edit attribute",
   "edit_attribute_description": "Description:",
   "edit_attribute_bonus": "Bonus:",
   "add_attribute_name": "Name:",
   "add_attribute_title": "Add attribute",
   "attribute_exists_error_message": "The attribute with this name already exists!",
-  "attribute_name_empty_error_message": "Attribute name cannot be empty!"
+  "attribute_name_empty_error_message": "Attribute name cannot be empty!",
+  "add_race_title": "Add race",
+  "delete_race_title": "Are you sure you want to delete this race?",
+  "add_race_description": "Description:",
+  "add_race_name": "Name:",
+  "add_race_max_age": "Max age:",
+  "max_age_less10_error_message": "Minimal age cannot be less then 10 years!",
+  "max_age_empty_error_message": "Set maximum age for race!",
+  "race_name_empty_error_message": "Race name cannot be empty!"
 }
