--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,9 @@
   "cancel_button": "Отмена",
   "save_button": "Сохранить",
   "add_button": "Добавить",
+  "delete_button": "Удалить!",
+  "confirm_title": "Вы уверены?",
+  "by_default": "По умолчанию",
   "brand_name": "ЭРИЛОН",
   "login_button": "Войти",
   "nick_name": "Имя...",
@@ -39,15 +42,26 @@
   "character_boost_button": "Прокачка",
   "delete_character_button": "Удалить",
   "attributes_header": "Атрибуты",
-  "attributes_table_header_name": "Имя",
-  "attributes_table_header_action_bonus": "Бонус на действия",
-  "attributes_table_header_description": "Описание",
-  "attributes_table_header_actions": "Действия",
+  "table_header_name": "Имя",
+  "table_header_action_bonus": "Бонус на действия",
+  "table_header_description": "Описание",
+  "table_header_actions": "Действия",
+  "table_header_max_age": "Максимальный возраст",
+  "table_header_attributes_cost": "Стомость атрибутов",
+  "table_header_races_qualities": "Расовые особенности",
   "edit_attribute_title": "Редактировать атрибут",
   "edit_attribute_description": "Описание:",
   "edit_attribute_bonus": "Бонус:",
   "add_attribute_name": "Имя:",
   "add_attribute_title": "Добавить атрибут",
   "attribute_exists_error_message": "Атрибут с таким именем уже существует!",
-  "attribute_name_empty_error_message": "Имя атрибута не может быть пустым!"
+  "attribute_name_empty_error_message": "Имя атрибута не может быть пустым!",
+  "add_race_title": "Добавить расу",
+  "delete_race_title": "Вы уверены что хотите удалить данную расу?",
+  "add_race_description": "Описание:",
+  "add_race_name": "Имя:",
+  "add_race_max_age": "Максимальный возраст:",
+  "max_age_less10_error_message": "Максимальный возраст не может быть меньше 10 лет!",
+  "max_age_empty_error_message": "Укажите максимальный возраст для расы!",
+  "race_name_empty_error_message": "Имя расы не может быть пустым!"
 }
