--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,6 +14,7 @@
     "add_button": "Add",
     "delete_button": "Delete!",
     "decrease_button": "Decrease!",
+    "create_button": "Create",
     "confirm_title": "Are you sure?",
     "accepted_button": "Confirm",
     "yes": "Yes!",
@@ -165,8 +166,15 @@
       "edit_experience_title": "Character's experience",
       "half_elf_mage_title": "Special qualities of half-elves",
       "half_elf_mage_text": "You rolled inherent quality \"mage\". Half-elves can increase their magic power when creating a character, buying an additional feature for the experience.",
-      "half_elf_mage_warning": "This is your only chance to choose!",
+      "half_elf_attributes_text": "Half-elves have the ability to purchase the following attributes at a price of 1 exp cheaper to create. You can select one or more attributes, or do not select one. Each selected attribute will cost you 10 exp right now, but, perhaps, it will save you on further pumping. ",
+      "half_elf_warning": "This is your only chance to choose!",
       "half_elf_mage_label": "+1 to Magic Power (10 ехр)",
+      "elven_dexterity": "Elven dexterity",
+      "elven_speed": "Elven speed",
+      "elven_perception": "Elven perception",
+      "elven_charisma": "Elven charisma",
+      "elven_pretty": "Pretty",
+      "elven_pretty_text": "to appearance limit",
       "decrease_theoretical_skills_1": "You have the following theoretical skills that exceed twice value of Wisdom",
       "decrease_theoretical_skills_2": "Its value will be lowered",
       "delete_merits": "This change leads removing the merits",
@@ -189,6 +197,15 @@
       "wisdom6_bonus_warning": "The value of Wisdom 6 will allow you to acquire the attached skills at 1 cheaper, but the change will take effect only after the changes are saved",
       "wisdom9_bonus_warning": "The value of Wisdom 9 will allow you to acquire the attached skills at 2 cheaper, but the change will take effect only after the changes are saved",
       "save_changes_warning": "After making changes, you will not be able to return to the character creation page!",
+      "delete_character": "You are sure that you want to delete the character, it can not be restored!",
+      "avatar": {
+        "title": "Upload character's avatar",
+        "default_message": "Drag picture to the area or click for upload",
+        "replace_message": "Drag picture to the area or click for upload",
+        "delete": "Delete",
+        "unexpected_error": "Upps..... Someting goes wrong",
+        "file_size_limit": "You cannot upload avatar more than"
+      },
       "notices": {
         "add_title": "Add notice",
         "edit_title": "Edit notice",
