--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,7 @@
     "add_button": "Добавить",
     "delete_button": "Удалить!",
     "decrease_button": "Понизить!",
+    "create_button": "Создать",
     "confirm_title": "Вы уверены?",
     "accepted_button": "Подтвердить",
     "yes": "Да!",
@@ -163,8 +164,15 @@
       "edit_experience_title": "Опыт персонажа",
       "half_elf_mage_title": "Особенные достоинства полуэльфов",
       "half_elf_mage_text": "У вас выпала особенность \"маг\". Полуэльфы могут увеличить свою силу магии при создании персонажа, купив дополнительную особенность за опыт.",
-      "half_elf_mage_warning": "Это ваш единственный шанс выбрать!",
+      "half_elf_attributes_text": "Полуэльфы обладают возможностью приобретать нижеперечисленные атрибуты по цене на 1 ехр ниже при создании. Вы можете выбрать один или несколько атрибутов, или не выбирать ни одного. Каждый выбранный атрибут обойдется вам в 10 ехр сейчас, но, возможно, позволит сэкономить на дальнейшей прокачке. ",
+      "half_elf_warning": "Это ваш единственный шанс выбрать!",
       "half_elf_mage_label": "+1 к Силе Магии (10 ехр)",
+      "elven_dexterity": "Эльфийская ловкость",
+      "elven_speed": "Эльфийская скорость",
+      "elven_perception": "Эльфийское восприятие",
+      "elven_charisma": "Эльфийская харизма",
+      "elven_pretty": "Симпатичность",
+      "elven_pretty_text": "к границе внешности",
       "decrease_theoretical_skills_1": "У вас есть следующие теоретические навыки, превышающие удвоенное значение Мудрости",
       "decrease_theoretical_skills_2": "Их значение будет понижено",
       "delete_merits": "Данное изменение приведет к удалению достоинств",
@@ -187,6 +195,15 @@
       "wisdom6_bonus_warning": "Значение мудрости 6 позволит вам приобретать прикрепленные навыки на 1 дешевле, но изменение вступит в силу только после сохранения изменений",
       "wisdom9_bonus_warning": "Значение мудрости 9 позволит вам приобретать прикрепленные навыки на 2 дешевле, но изменение вступит в силу только после сохранения изменений",
       "save_changes_warning": "После внесения изменений вы не сможете больше вернуться на страницу создания персонажа!",
+      "delete_character": "Вы уверены что хотите удалить персонажа, его невозможно восстановить!",
+      "avatar": {
+        "title": "Загрузить аватар персонажа",
+        "default_message": "Перетащите картинку в область или кликните для загрузки",
+        "replace_message": "Перетащите картинку в область или кликните для загрузки",
+        "delete": "Удалить",
+        "unexpected_error": "Уппссс... что то пошло не так",
+        "file_size_limit": "Нельзя загружать аватар больше"
+      },
       "attached_skills_categories": {
         "magic": "Магические",
         "social": "Социальные",
