--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,7 +3,9 @@
     "by_default": "По умолчанию",
     "present": "Присутствует",
     "absent": "Отсутствует",
-    "brand_name": "ЭРИЛОН"
+    "brand_name": "ЭРИЛОН",
+    "back": "Назад",
+    "delete": "Удалить"
   },
   "popup": {
     "cancel_button": "Отмена",
