--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -432,7 +432,7 @@
         "talent": "талант",
         "fight": "боевые",
         "appearance": "внешность",
-        "other": "остальные"
+        "others": "остальные"
       },
       "delete": {
         "text": "Вы уверены что хотите удалить данное достоинство?"
