--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -246,7 +246,7 @@
         "gained": "Gained"
       },
       "flaws_categories": {
-        "physical": "Phycical",
+        "physical": "Physical",
         "mental": "Mental",
         "social": "Social",
         "codex": "Codex of honor",
