--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,8 @@
     "absent": "Отсутствует",
     "brand_name": "ЭРИЛОН",
     "back": "Назад",
-    "delete": "Удалить"
+    "delete": "Удалить",
+    "yes": "Да"
   },
   "popup": {
     "cancel_button": "Отмена",
@@ -143,6 +144,25 @@
       "delete_character_button": "Удалить"
     },
     "character": {
+      "power": "Сила",
+      "dexterity": "Ловкость",
+      "speed": "Скорость",
+      "reaction": "Реакция",
+      "perception": "Восприятие",
+      "endurance": "Выносливость",
+      "vitality": "Живучесть",
+      "wisdom": "Мудрость",
+      "intelligence": "Интеллект",
+      "will": "Воля",
+      "charisma": "Харизма",
+      "magic": "Магия",
+      "appearance": "Внешность",
+      "luck": "Удача",
+      "mage": "Маг",
+      "half_elf": "Полуэльф",
+      "talent": "талант",
+      "alchemy": "Алхимия",
+      "modification_merit": "Модификация заклинаний",
       "create_header": "Создание персонажа",
       "edit_header": "Прокачка персонажа",
       "inherents_disclaimer": "Врожденные особенности персонажа создаются случайным образом. По нажатию на кнопку, вы можете создать набор врожденных особенностей для вашего персонажа. Создать набор врожденных особенностей для персонажа можно только раз, и изменить их потом можно будет только по согласованию с мастером.",
