--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -134,7 +134,7 @@
       "race_selection_placeholder": "Выберите расу...",
       "experience_label": "Очки опыта",
       "create_character_button": "Создать",
-      "my_characters_header": "Персонажаи",
+      "my_characters_header": "Персонажи",
       "show_all_characters_button": "Показать всех персонажей",
       "show_my_characters_button": "Показать моих персонажей",
       "empty_characters_list_message": "Вы еще не создали ни одного персонажа, для создания воспользуйтесь формой выше.",
