--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -145,7 +145,7 @@
       "delete_character_button": "Delete"
     },
     "character": {
-      "power": "Power",
+      "power": "Strength",
       "dexterity": "Dexterity",
       "speed": "Speed",
       "reaction": "Reaction",
