--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -187,19 +187,19 @@
       "edit_experience_title": "Character's experience",
       "half_elf_mage_title": "Special qualities of half-elves",
       "half_elf_mage_text": "You rolled inherent quality \"mage\". Half-elves can increase their magic power when creating a character, buying an additional feature for the experience.",
-      "half_elf_attributes_text": "Half-elves have the ability to purchase the following attributes at a price of 1 exp cheaper to create. You can select one or more attributes, or do not select one. Each selected attribute will cost you 10 exp right now, but, perhaps, it will save you on further pumping. ",
+      "half_elf_attributes_text": "Half-elves have the ability to purchase the following attributes at a price of 1 exp cheaper on creation. You can select one or more attributes, or select none of them. Each selected attribute will cost you 10 exp right now, but, perhaps, it will save you on further advancement. ",
       "half_elf_warning": "This is your only chance to choose!",
       "half_elf_mage_label": "+1 to Magic Power (10 ехр)",
       "elven_dexterity": "Elven dexterity",
       "elven_speed": "Elven speed",
       "elven_perception": "Elven perception",
       "elven_charisma": "Elven charisma",
-      "elven_pretty": "Pretty",
+      "elven_pretty": "Prettiness",
       "elven_pretty_text": "to appearance limit",
       "decrease_theoretical_skills_1": "You have the following theoretical skills that exceed twice value of Wisdom",
-      "decrease_theoretical_skills_2": "Its value will be lowered",
-      "delete_merits": "This change leads removing the merits",
-      "have_prerequisites": "имеет пререквизит",
+      "decrease_theoretical_skills_2": "Their values will be lowered",
+      "delete_merits": "This change leads to removing following merits",
+      "have_prerequisites": "have prerequisites",
       "exceed_limit_1": "Value of",
       "exceed_limit_2": "has reached the maximum for character creation",
       "exceed_limit_3": "has reached the maximum",
@@ -208,17 +208,17 @@
       "exceed_trigger_skill_level_1": "Level of",
       "exceed_trigger_skill_level_2": "has reached the maximum for the moment",
       "exceed_base_spell_level_1": "Spell level of",
-      "exceed_base_spell_level_2": "can not exceed the spell level of",
-      "not_mag_add_magic_skills": "You do not have the innate features of \"Mage\". You will be limited in using magic skills: spells you can use only as scrolls, for writing which you will also need the skills of \"Ancient Language\" and \"Calligraphy\". Are you sure you want to take this skill?",
-      "delete_spells": "This change will result in the removal of spells from this school",
-      "delete_skills": "This change will result in the removal of skills",
-      "decrease_spell_level": "When the level of this spell is lowered, the spell level will accordingly decrease",
-      "modification_needed": "In order to use this spell, you need to have merit \"Spell modification\". Since you do not have one, you will not be able to use this spell. Are you sure you want to add it?",
+      "exceed_base_spell_level_2": "can not exceed spell level of",
+      "not_mag_add_magic_skills": "You don't have inherent quality \"Mage\". You will be limited in using magic skills: spells you can use only as scrolls, for writing which you will also need the skills of \"Ancient Language\" and \"Calligraphy\". Are you sure you want to take this skill?",
+      "delete_spells": "This change leads to removing following spells from this school",
+      "delete_skills": "This change leads to removing following skills",
+      "decrease_spell_level": "When the level of this spell is lowered the level of a basic spell  will accordingly decrease",
+      "modification_needed": "In order to use this spell, you need to have merit \"Spell modification\". Since you don't have one, you will not be able to use this spell. Are you sure you want to add it?",
       "derivatives": "Derivatives",
       "wisdom6_bonus_warning": "The value of Wisdom 6 will allow you to acquire the attached skills at 1 cheaper, but the change will take effect only after the changes are saved",
       "wisdom9_bonus_warning": "The value of Wisdom 9 will allow you to acquire the attached skills at 2 cheaper, but the change will take effect only after the changes are saved",
       "save_changes_warning": "After making changes, you will not be able to return to the character creation page!",
-      "delete_character": "You are sure that you want to delete the character, it can not be restored!",
+      "delete_character": "Are you sure you want to delete the character? It can not be restored!",
       "avatar": {
         "title": "Upload character's avatar",
         "default_message": "Drag picture to the area or click for upload",
