--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -682,6 +682,7 @@
     "profile": {
       "header": "Личные настройки",
       "stub": "Тут будут какие то личные настройки",
+      "default_skills_label": "Показывать дефолтные прикпрепленные навыки со значением 0 на странице просмотра",
       "attribute_sequence": "Последовательность отображения атрибутов"
     }
   }
