--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -310,7 +310,8 @@
       "tab": {
         "main": "Основные",
         "spells": "Заклинания",
-        "notices": "Заметки"
+        "notices": "Заметки",
+        "additional_derived": "Производные"
       },
       "derivative": {
         "hit_pierce_punch": "Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа",
@@ -324,6 +325,28 @@
         "endurance_points": "Количество очков выносливости персонажа. Тратится на активацию заклинаний и способностей, бег и любые действия. Равно выносливости персонажа, умноженной на 20",
         "initiative": "Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"
       },
+      "additional_derivatives": {
+        "weight": {
+          "header": "Вес",
+          "kg": "кг",
+          "1": ": (-1d) на прыжки, удержание равновесия и альпинизм  за каждое превышение предела. Затраты усталости на альпинизм возрастают вдвое",
+          "2": ": (-1 единица) к скорости на спринтерский бег/ быстрый бег и (-1d) на устойчивость и маскировку  за каждое превышение предела",
+          "3": ": (-1 единица) к скорости на бег за каждое превышение предела",
+          "4": ": (-1 единица) к скорости шага за каждое превышение предела. Затраты усталости на перемещение возрастают вдвое",
+          "5": ": затраты усталости увеличиваются в три раза (т.е. затраты усталости на перемещение возрастают в 6 раз)",
+          "6": ": затраты усталости увеличиваются в шесть раз. В небоевых ситуациях персонаж тратит 1 ЕУ в минуту."
+        },
+        "watchfulness_vision": "Наблюдательность (зрение)",
+        "watchfulness_hearing": "Наблюдательность (слух)",
+        "bounce": "Прыжок",
+        "falling_damage_coefficient": "Коэффициент падучести",
+        "balance_check": "Устойчивость",
+        "poise_check": "Равновесие",
+        "appearance": "Внешность",
+        "cloaking_moving": "Маскировка (движение)",
+        "cloaking_not_moving": "Маскировка (неподвижность)"
+      },
+
       "notice": {
         "add_title": "Добавить заметку",
         "edit_title": "Изменить заметку",
