--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -336,6 +336,39 @@
           "5": ": затраты усталости увеличиваются в три раза (т.е. затраты усталости на перемещение возрастают в 6 раз)",
           "6": ": затраты усталости увеличиваются в шесть раз. В небоевых ситуациях персонаж тратит 1 ЕУ в минуту."
         },
+        "move": {
+          "jard": "ярдов",
+          "header": "Передвижение",
+          "step": "Шаг",
+          "run": "Бег",
+          "sprint": "Быстрый бег",
+          "climbing": "Лазанье",
+          "swimming": "Плавание"
+        },
+        "injury_boundaries": {
+          "header": "Пороги ранений",
+          "scratches": "Царапины",
+          "light": "Легкие ранения",
+          "medium": "Средние ранения",
+          "heavy": "Тяжелые ранения",
+          "deadly": "Смертельные ранения",
+          "death": "Смерть"
+        },
+        "hit_points": {
+          "header": "Хит-поинты",
+          "scratches": "Царапины",
+          "light": "Легкие ранения",
+          "medium": "Средние ранения",
+          "heavy": "Тяжелые ранения",
+          "deadly": "Смертельные ранения"
+        },
+        "damage_absorption": {
+          "header": "Поглощение повреждений",
+          "stub": "Колющих",
+          "slash": "Рубящих",
+          "cut": "Режущих",
+          "blunt": "Дробящих"
+        },
         "watchfulness_vision": "Наблюдательность (зрение)",
         "watchfulness_hearing": "Наблюдательность (слух)",
         "bounce": "Прыжок",
