--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -369,6 +369,7 @@
           "cut": "Cutting",
           "blunt": "Blunting"
         },
+        "mana_refresh": "Mana regeneration",
         "watchfulness_vision": "Watchfulness (vision)",
         "watchfulness_hearing": "Watchfulness (hearing)",
         "bounce": "Bounce",
