--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -369,6 +369,7 @@
           "cut": "Режущих",
           "blunt": "Дробящих"
         },
+        "mana_refresh": "Восстановление усталости",
         "watchfulness_vision": "Наблюдательность (зрение)",
         "watchfulness_hearing": "Наблюдательность (слух)",
         "bounce": "Прыжок",
